comments and nav

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav>
       <div class="container text-white">
         <div class="row">
-          <div class="col d-flex flex-wrap gap-1 gap-md-4 flex-column flex-md-row">
+          <div class="col d-flex flex-wrap gap-1 gap-md-4 flex-column flex-md-row d-none d-md-flex">
             <div><i class="bi bi-telephone-fill"></i> +963963447895</div>
             <div>
               <a href="mailto:shop@gmail.com"><i class="bi bi-envelope-fill"></i> shop@gmail.com</a>
