--- a/index.html
+++ b/index.html
@@ -41,33 +41,31 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="./images/sh1.jpg" class="d-block w-100" alt="image" draggable="false" />
-            <div class="carousel-caption d-md-block">
-              <p>Welocme to <br> Our Shop <br> <i class="bi bi-cart4"></i>
-              </p>
+            <div class="carousel-caption caption1 d-md-block">
+              <div>Welocme to <br> Our Shop <br> <i class="bi bi-cart4"></i>
+              </div>
             </div>
           </div>
           <div class="carousel-item">
             <img src="./images/sh2.jpg" class="d-block w-100" alt="image" draggable="false" />
             <div class="carousel-caption caption1 d-md-block">
-              <p>
-                Let's <br />
+              <div>Let's <br />
                 Explore <br />
                 Some <br />
                 Clothes
-              </p>
+              </div>
             </div>
           </div>
           <div class="carousel-item">
             <img src="./images/sh3.jpg" class="d-block w-100" alt="image" draggable="false" />
             <div class="carousel-caption caption2 d-md-block">
-              <p>
-                With <br />
+              <div>With <br />
                 40%
                 OFF <br />
                 Just <br />
                 For
                 You <br />
-              </p>
+              </div>
             </div>
           </div>
         </div>
