--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
               <div class="container" id="cart-container"><span class="opacity-75">No Products</span></div>
             </div>
           </div>
+          <div class="alert alert-danger mt-3 d-none" id="error-alert">Error fetching data. Please check your internet
+          </div>
         </div>
       </div>
     </section>
