--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
               <div class="container" id="cart-container"><span class="opacity-75">No Products</span></div>
             </div>
           </div>
-          <div class="alert alert-danger mt-3 d-none" id="error-alert">Error fetching data. Please check your internet
+          <div class="alert alert-danger mt-3 d-none m-0" id="error-alert">Error fetching data. Please check your
+            internet
           </div>
         </div>
       </div>
@@ -236,6 +237,7 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
   <script src="./js/app.js"></script>
+
 </body>
 
 </html>
