--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <header>
     <nav>
-      <div class="container text-white">
+      <div class="container text-white py-3">
         <div class="row">
           <div class="col d-flex flex-wrap gap-1 gap-md-4 flex-column flex-md-row d-none d-md-flex">
             <div><i class="bi bi-telephone-fill"></i> +963963447895</div>
@@ -73,7 +73,7 @@
     </section>
     <section>
       <div class="container mb-5 pb-5 mt-3">
-        <div class="row">
+        <div class="row p-3">
           <div class="dropdown-right">
             <button class="bg-white border-0 position-relative" data-bs-toggle="dropdown" aria-expanded="false"
               data-bs-auto-close="outside">
@@ -87,7 +87,7 @@
               <div class="container" id="cart-container"><span class="opacity-75">No Products</span></div>
             </div>
           </div>
-          <div class="alert alert-danger mt-3 d-none m-0" id="error-alert">Error fetching data. Please check your
+          <div class="alert alert-danger mt-3 d-none m-0" role="alert" id="error-alert">Error fetching data. Please check your
             internet
           </div>
         </div>
@@ -152,38 +152,6 @@
             </div>
           </div>
         </div>
-      </div>
-    </section>
-
-    <section>
-      <h1 class="text-center" style="font-size: 50px;">Participants</h1>
-      <div class="d-flex justify-content-center mt-3 pb-5">
-        <table>
-          <thead>
-            <tr>
-              <th class="px-3 py-2 px-md-5 ">Name</th>
-              <th class="px-3 py-2 px-md-5 ">Class</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td class="px-3 py-2 px-md-5 ">Ayah_234810</td>
-              <td class="px-3 py-2 px-md-5 ">C4</td>
-            </tr>
-            <tr>
-              <td class="px-3 py-2 px-md-5 ">hala_216641</td>
-              <td class="px-3 py-2 px-md-5 ">C4</td>
-            </tr>
-            <tr>
-              <td class="px-3 py-2 px-md-5 ">mohamad_yousef_235949</td>
-              <td class="px-3 py-2 px-md-5 ">C4</td>
-            </tr>
-            <tr>
-              <td class="px-3 py-2 px-md-5 ">m_faisal_285015</td>
-              <td class="px-3 py-2 px-md-5 ">C3</td>
-            </tr>
-          </tbody>
-        </table>
       </div>
     </section>
   </main>
